tests/lox/errors/runtime_errors.lox
1 + true;
// err: Failed to evaluate the expression of the statement: [at column 3 in line 1] Operands of binary operator Plus must be two numbers or one of them must be a string, but the following were passed:
// err:     lhs: Number
// err:     rhs: Bool